GET /venue/id
