# openapi-spec.yaml
@@ -437,6 +437,39 @@ paths:
         '500':
           $ref: '#/components/responses/ServerError'
   /venues/{venueId}:
+    get:
+      summary: Get a venue.
+      operationId: getVenue
+      tags:
+        - venues
+      parameters:
+        - in: path
+          name: venueId
+          schema:
+            type: string
+          required: true
+          description: Venue ID.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Venue'
+      responses:
+        '200':
+          description: Venue data.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Venue'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '404':
+          $ref: '#/components/responses/NotFound'
+        '500':
+          $ref: '#/components/responses/ServerError'
     put:
       summary: Update a venue.
       operationId: updateVenue
@@ -600,6 +633,9 @@ components:
       properties:
         id:
           type: string
+        sourceId:
+          type: number
+          format: int32
         name:
           type: string
         description:
